--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 
 <%- include('header') -%>
-  <div id="root"><%- content -%></div>
+  <div id="root"><%- initialMarkup -%></div>
 
   <script type="text/javascript">
-
+    window.initialData = <%- JSON.stringify(initialData) -%>
   </script>
 <%- include('footer') -%>
