--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,9 @@
 <%- include('header') -%>
   <div id="root"><%- initialMarkup -%></div>
 
+
   <script type="text/javascript">
+    //bit of a hack that tutorial guy showed
     window.initialData = <%- JSON.stringify(initialData) -%>
   </script>
 <%- include('footer') -%>
